--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="greyColor">#FF92929D</color>
     <color name="blueBottomNavigation">#FF12CDD9</color>
     <color name="lightBlack">#FF252836</color>
+    <color name="orange">#FF8700</color>
 </resources>
