--- a/app/src/main/res/drawable/btn_play.xml
+++ b/app/src/main/res/drawable/btn_play.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/orange"/>
-    <corners android:radius="999dp"/>
-
-</shape>
+<ripple android:shape="rectangle"
+xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/greyColor">
+<item>
+    <shape android:shape="rectangle">
+        <solid android:color="@color/orange"/>
+        <corners android:radius="999dp"/>
+    </shape>
+</item>
+</ripple>
