--- a/app/src/main/res/layout/item_of_movie_or_series.xml
+++ b/app/src/main/res/layout/item_of_movie_or_series.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    >
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/movieOrSeriesImage"
+        android:background="@drawable/popup_background"
         tools:background="@tools:sample/backgrounds/scenic"
         android:paddingHorizontal="8dp"
         android:layout_width="135dp"
