Agregando los fragmentos principales

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,7 +7,7 @@
     android:background="@color/containerColor"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".view.MainActivity2">
+    tools:context=".view.MainFragment2">
 
     <ProgressBar
         android:id="@+id/progressBar"
