--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/containerColor"
     android:orientation="vertical"
     android:gravity="center_horizontal">
+
 
     <FrameLayout
         android:id="@+id/contentSearchView"
@@ -21,6 +23,7 @@
         android:layout_alignParentTop="true"
         app:layout_constraintTop_toTopOf="parent"
         >
+
 
         <EditText
             android:id="@+id/searchView"
@@ -50,7 +53,7 @@
     android:layout_height="0dp"
     android:fillViewport="true"
     app:layout_constraintTop_toBottomOf="@+id/contentSearchView"
-    app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
+    app:layout_constraintBottom_toTopOf="@+id/layoutBottom"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -205,6 +208,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
 
+<LinearLayout
+    android:id="@+id/layoutBottom"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    >
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
@@ -216,7 +227,13 @@
         app:menu="@menu/bottom_nav"
         app:labelVisibilityMode="labeled"
         app:itemTextColor="@color/icons_color"
-        app:layout_constraintBottom_toBottomOf="parent"
 
         />
+
+</LinearLayout>
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
