--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -1,8 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/container_FrameLayout"
+    android:layout_above="@+id/bottomNavigation"
+    />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/containerColor"
+        android:layout_alignParentBottom="true"
+        android:visibility="visible"
+        app:labelVisibilityMode="labeled"
+        app:itemTextAppearanceActive="@style/Style.Monserrat"
+        app:itemTextAppearanceInactive="@style/Style.Monserrat"
+        app:itemIconTint="@color/icons_color"
+        app:menu="@menu/bottom_nav"
+        app:itemTextColor="@color/icons_color"
+        />
+
+
+</RelativeLayout>
