--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,7 @@
     android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/containerColor"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
-
+    android:background="@color/containerColor">
 
     <FrameLayout
         android:id="@+id/contentSearchView"
@@ -23,7 +20,6 @@
         android:layout_alignParentTop="true"
         app:layout_constraintTop_toTopOf="parent"
         >
-
 
         <EditText
             android:id="@+id/searchView"
@@ -53,7 +49,7 @@
     android:layout_height="0dp"
     android:fillViewport="true"
     app:layout_constraintTop_toBottomOf="@+id/contentSearchView"
-    app:layout_constraintBottom_toTopOf="@+id/layoutBottom"
+    app:layout_constraintBottom_toBottomOf="parent"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -207,33 +203,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
-
-<LinearLayout
-    android:id="@+id/layoutBottom"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    app:layout_constraintBottom_toBottomOf="parent"
-    >
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/containerColor"
-        app:itemTextAppearanceActive="@style/Style.Monserrat"
-        app:itemTextAppearanceInactive="@style/Style.Monserrat"
-        app:itemIconTint="@color/icons_color"
-        app:menu="@menu/bottom_nav"
-        app:labelVisibilityMode="labeled"
-        app:itemTextColor="@color/icons_color"
-
-        />
-
-</LinearLayout>
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
